# api-gateway/src/api/routes/auth.route.js
@@ -4,13 +4,10 @@ const authController = require("@controllers/auth.controller");
 const authMiddleware = require("@middlewares/auth.middleware");
 
 router.post("/login", authMiddleware.extractHeaders, authController.login);
-
+router.post("/signup", authMiddleware.extractHeaders, authController.signup);
 router.post("/password/forgot", authMiddleware.extractHeaders, authController.forgotPassword);
-
 router.post("/password/reset", authMiddleware.extractHeaders, authController.resetPassword);
-
 router.post("/invitation/accept", authMiddleware.extractHeaders, authController.acceptUserInvitation);
-
 router.post("/invitation/info", authMiddleware.extractHeaders, authController.fetchUserInvitation);
 
 module.exports = router;
